updated for may

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -23,7 +23,8 @@ h3 {
   font-size: 26px;
   font-weight: bold;
   line-height: 1;
-  color: #262626;
+  color: #96070a;
+  text-align: center;
 }
 
 h1 {
